--- a/SpointLiteVersion/Content/Style.css
+++ b/SpointLiteVersion/Content/Style.css
@@ -1,10 +1,61 @@
-﻿body {
-}
+﻿
 
 .form-horizontal .form-group {
     margin-right: 25px;
     margin-left: -15px;
     padding-right:0px !important;
+}
+
+.contedor{
+    margin-top:3% !important;
+}
+
+.eliminar {
+    font-size: 23px;
+}
+.eli {
+    color: red;
+}
+.divbuscar{
+    margin-left:2%;
+}
+.iconocrear {
+    font-size: 20px;
+    text-align: left;
+}
+.crear {
+    width: 120px;
+    text-align: center;
+    margin-left:3%;
+}
+th {
+    font-weight: bold;
+}
+.table {
+    color: #484848 !important;
+    padding-bottom:10px;
+}
+.dataTables_length{
+    margin-top:20px;
+    padding-left:10px;
+}
+.dataTables_filter input {
+    border: none;
+    border-bottom: 1px solid #817e7e;
+    padding-top: 13px;
+    margin-right: 20px;
+}
+.dataTables_wrapper{
+    margin-bottom:30px;
+}
+
+.paginate_button.current {
+    background: #75beee !important;
+    color: #fff !important;
+}
+
+.table tr:hover {
+    color: #111 !important;
 }
 .iconousuario{
     font-size:60px;
