--- a/SpointLiteVersion/Views/vendedores/Delete.cshtml
+++ b/SpointLiteVersion/Views/vendedores/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SpointLiteVersion.Models.suplidores
+﻿@model SpointLiteVersion.Models.vendedores
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>suplidores</h4>
+    <h4>vendedores</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,14 +20,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.telefono)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.telefono)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.direccion)
         </dt>
 
@@ -36,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.correo)
+            @Html.DisplayNameFor(model => model.telefono)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.correo)
+            @Html.DisplayFor(model => model.telefono)
         </dd>
 
         <dt>
@@ -49,6 +41,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.cedula)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.cumpleaños)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.cumpleaños)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.correo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.correo)
         </dd>
 
     </dl>
