--- a/SpointLiteVersion/Views/facturas/Create.cshtml
+++ b/SpointLiteVersion/Views/facturas/Create.cshtml
@@ -109,32 +109,78 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+<div class="clasefactura" id="clase">
+    <div class="principal">
+        <div class="imga"><img src="~/Content/dist/img/carrito3.png" class="imagencarrito" alt="Alternate Text" /></div>
+        <div class="datosclientes">
+            <h2>Cliente <span id="cliente1"></span></h2>
+            <h2>Vendedor <span id="vendedor1"></span></h2>
 
-<table id="detalle" class="lista table" border="1">
-    <thead style="font-size:18px;">
-        <tr class="bg-success">
-            <td>Detalle de la Compra</td>
-        </tr>
-        <tr class="bg-danger">
-            <th>Id</th>
-            <th>descripcion</th>
-            <th>Cantidad</th>
-            <th>Precio</th>
-            <th>Descuento</th>
-            <th>Itbis</th>
-            <th>Importe</th>
-        </tr>
-    </thead>
-    <tbody></tbody>
+        </div>
+    </div>
+    <table id="detalle" class="lista table" border="1">
+        <thead style="font-size:18px;">
+            <tr class="bg-success">
+                <td>Detalle de la Compra</td>
+            </tr>
+            <tr class="bg-danger">
+                <th>Id</th>
+                <th>descripcion</th>
+                <th>Cantidad</th>
+                <th>Precio</th>
+                <th>Descuento</th>
+                <th>Itbis</th>
+                <th>Importe</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
 
-</table>
-<table class="table">
-    <tr>
-        <td style="float:right;font-size:20px;">Total a Pagar</td>
-        <th></th>
-        <td><input style="font-size:20px; font-weight:700;" class="form-control" type="text" name="TotalaPagar" id="TotalaPagar" required readonly /></td>
-    </tr>
-</table>
+    </table>
+    <table class="table">
+        <tr>
+            <td style="float:right;font-size:20px;">Total a Pagar</td>
+            <th></th>
+            <td><input style="font-size:20px; font-weight:700;" class="form-control" type="text" name="TotalaPagar" id="TotalaPagar" required readonly /></td>
+        </tr>
+        <tr>
+            <td style="float:left;font-size:20px;">Subtotal</td>
+            <th></th>
+            <td><input style="font-size:20px; font-weight:700;" class="form-control" type="text" name="subtotalpagar" id="subtotalpagar" required readonly /></td>
+        </tr>
+        <tr>
+            <td style="float:left;font-size:20px;">Descuento</td>
+            <th></th>
+            <td><input style="font-size:20px; font-weight:700;" class="form-control" type="text" name="descuentodado" id="descuentodado" required readonly /></td>
+        </tr>
+    </table>
+
+ 
+    <div class="padre">
+        <div class="firma fimas1">
+            <div class="firma1">
+                <label>_________________________________</label>
+            </div>
+            <div class="firma1">
+                <label class="nombrefirma">Recibido Por</label>
+            </div>
+
+
+        </div>
+        <div class="firma firmas">
+            <div class="firma1">
+                <label>_________________________________</label>
+            </div>
+            <div class="firma1">
+                <label class="nombrefirma">Emitido Por</label>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<button type="button" class="imprimir btn btn-danger" id="imprimir"> <i class="fas fa-print"></i> PRINT</button>
+
 <script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
@@ -163,8 +209,20 @@
     var total = 0;
     var valor = 0;
     var subtotal = 0;
+    var subtotal1 = 0;
+    var subtotalpagar = 0;
+    var valor1 = 0;
+    var descuento = 0;
     function fn_agregar() {
+        var combo = document.getElementById("cliente");
+        var selected = combo.options[combo.selectedIndex].text
 
+        var combo1 = document.getElementById("vendedor");
+        var selected1 = combo1.options[combo1.selectedIndex].text
+        document.getElementById("cliente1").innerText = selected;
+        document.getElementById("vendedor1").innerText = selected1;
+        alert(selected);
+        
         cadena = "<tr>"
 
         cadena = cadena + "<td>" + $("#idproducto").val() + "</td>";
@@ -178,12 +236,17 @@
         var y = 0;
         var x = 0;
         var des = 0;
+        
         y = $("#cantidad").val();
         x = $("#precio1").val();
         des = $("#descuento1").val();
+        descuento = des;
         subtotal = (x * y) - des;
+        subtotal1 = (x * y);
         cadena = cadena + "<td>" + subtotal + "</td>"
-        cadena = cadena + "<td><a class ='elimina'><button class='btn btn-danger' type='button'><span class='fa fa-remove'></span></button></a></td>";
+        cadena = cadena + "<td>" + subtotal1 + "</td>"
+
+        cadena = cadena + "<td class='botoneliminar'><a class ='elimina'><button class='btn btn-danger' type='button'><span class='fa fa-remove'></span></button></a></td>";
         $("#detalle tbody").append(cadena);
         sumar();
         fn_dar_eliminar();
@@ -192,13 +255,19 @@
 
     function sumar() {
         total = total + subtotal;
+        subtotalpagar = subtotalpagar+subtotal1;
         console.info(total);
+        $("#descuentodado").val(descuento)
+
+        $("#subtotalpagar").val(subtotalpagar)
         $("#TotalaPagar").val(total);
 
     }
     function fn_dar_eliminar() {
         $("a.elimina").click(function () {
             valor = $(this).parents("tr").find("td").eq(6).html();
+            valor1 = $(this).parents("tr").find("td").eq(7).html();
+
             console.info(valor);
             $(this).parents("tr").fadeOut("normal", function () {
                 $(this).remove();
@@ -208,6 +277,9 @@
     };
     function restar() {
         total = total - valor;
+        subtotalpagar = subtotalpagar - valor1;
+        $("#subtotalpagar").val(subtotalpagar);
+
         $("#TotalaPagar").val(total);
     }
     function limpiar() {
@@ -218,5 +290,105 @@
         $("#producto").val("");
         $("#cantidad").val("");
         $("#descuento").val("");
+    }
+</script>
+<script>
+    $(document).ready(function () {
+        $("#imprimir").click(function () {
+            var option = {
+                debug: false,               // show the iframe for debugging
+                importCSS: true,            // import parent page css
+                importStyle: true,         // import style tags
+                printContainer: true,       // print outer container/$.selector
+                loadCSS: "/Content/estilosimprimir.css",                // path to additional css file - use an array [] for multiple
+                pageTitle: "",              // add title to print page
+                removeInline: false,        // remove inline styles from print elements
+                removeInlineSelector: "*",  // custom selectors to filter inline styles. removeInline must be true
+                printDelay: 333,            // variable print delay
+                header: null,               // prefix to html
+                footer: null,               // postfix to html
+                base: false,                // preserve the BASE tag or accept a string for the URL
+                formValues: true,           // preserve input/form values
+                canvas: false,              // copy canvas content
+                doctypeString: '...',       // enter a different doctype for older markup
+                removeScripts: false,       // remove script tags from print content
+                copyTagClasses: false,      // copy classes from the html & body tag
+                beforePrintEvent: null,     // function for printEvent in iframe
+                beforePrint: null,          // function called before iframe is filled
+                afterPrint: null            // function called before iframe is removed
+            }
+            $(".clasefactura").printThis(option);
+        });
+    });
+</script>
+<script>
+
+    $(document).ready(function () {
+
+        $("a[rel='pop-up']").click(function () {
+            var caracteristicas = "height=550,width=1000,scrollTo,resizable=1,scrollbars=1,location=0";
+            nueva = window.open(this.href, 'popup', caracteristicas);
+
+
+            return false;
+        });
+        //botones
+        $("#finalizar").click(function () {
+            //alertify.alert("Boton Iniciado");            
+            //console.info('hola');
+
+            var i = 0;
+            var envio = "{Fecha:'" + $("#id_fecha").val() + "',ModoPago:'" + $("#modoPago").val() + "',IdCliente:'" + $("#codigoCliente").val() + "',IdCabecera:'2',Total:'" + $('#TotalaPagar').val() + "',";
+            $("#detalle tbody tr").each(function (index) {
+                if (i == 0) {
+                    envio += "ListadoDetalle:[{IdProducto:'" + $(this).find('td').eq(0).text() +
+                        "',Cantidad:'" + $(this).find('td').eq(2).text() +
+                        "',Descuento:'" + $(this).find('td').eq(4).text() +
+                        "',SubTotal:'" + $(this).find('td').eq(5).text() + "'}";
+                } else {
+                    envio += ",{IdProducto:'" + $(this).find('td').eq(0).text() +
+                        "',Cantidad:'" + $(this).find('td').eq(2).text() +
+                        "',Descuento:'" + $(this).find('td').eq(4).text() +
+                        "',SubTotal:'" + $(this).find('td').eq(5).text() + "'}"
+                }
+                i = 1;
+            });
+            envio += "]}";
+
+            var json = eval("(" + envio + ')');
+
+            //alertify.alert("INGRESE DATOS");
+            console.info(json);
+        var miUrl = '@Url.Action("PDf", "facturas")'
+
+            $.ajax({
+                url: miUrl,
+                type: "POST",
+                async: true,//this makes the ajax-call blocking
+                dataType: 'json',
+                success: function (response) {
+
+                    valid = response.valid;
+                },
+                error: function (error) {
+
+                }
+            });
+            window.location.href = '/facturas/PDf/';
+
+        });
+
+    });
+</script>
+<script language="javascript">
+    function printdiv(printpage) {
+        var headstr = "<html><head><title></title></head><body>";
+        var footstr = "</body>";
+        var newstr = document.all.item(printpage).innerHTML;
+        var oldstr = document.body.innerHTML;
+        document.body.innerHTML = headstr + newstr + footstr;
+        window.print();
+        document.body.innerHTML = oldstr;
+        return false;
     }
 </script>
