--- a/SpointLiteVersion/Views/suplidores/Index.cshtml
+++ b/SpointLiteVersion/Views/suplidores/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="col-md-9 modal-content contedor" style="width:90%; margin-left:4%; margin-top:2%;">
             <h2 style="margin-left:30px; margin-bottom:35px;">Suplidores</h2>
             <p>
-                <Button onclick="location.href='@Url.Action("Create","clientes1")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
+                <Button onclick="location.href='@Url.Action("Create","suplidores")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
 
             </p>
             <div class="form-row divbuscar">
