--- a/SpointLiteVersion/Views/Shared/_Layout.cshtml
+++ b/SpointLiteVersion/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
 
                     </li>
                     <li>
-                        <a class="collapse-item emp" href="@Url.Action("Index","Empleado")"><i class="fas fa-clipboard"></i> <span>Inventario</span></a>
+                        <a class="collapse-item emp" href="@Url.Action("Inventario","productos1")"><i class="fas fa-clipboard"></i> <span>Inventario</span></a>
 
                     </li>
                     <li class="">
@@ -188,6 +188,8 @@
         })
     </script>
     <script src="~/Scripts/printThis.js"></script>
+    <script src="~/Scripts/jquery.numeric.js"></script>
+    <script src="~/Scripts/autoNumeric/autoNumeric-min.js"></script>
 
 </body>
 
