--- a/SpointLiteVersion/Views/productos1/Inventario.cshtml
+++ b/SpointLiteVersion/Views/productos1/Inventario.cshtml
@@ -1,25 +1,22 @@
 ﻿@model IEnumerable<SpointLiteVersion.Models.productos>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Inventario";
 }
 
+<h2>Inventario</h2>
 
 <div class="container">
     <div class="row">
         <div class="col-md-9 modal-content contedor" style="width:90%; margin-left:4%; margin-top:2%;">
             <h2 style="margin-left:30px; margin-bottom:35px;">Productos</h2>
-            <p>
-                <Button onclick="location.href='@Url.Action("Create","productos1")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
-
-            </p>
             <div class="form-row divbuscar">
                 <div class="form-group col-md-4">
 
 
 
                 </div>
-               
+
             </div>
             <div class="row">
                 <div class="modal-content" style="width:88%; margin-left:4%; margin-top:2%;">
@@ -28,26 +25,26 @@
 
                             <tr>
                                 <th>
-                                    @Html.DisplayName("ID")
+                                    @Html.DisplayNameFor(model => model.idProducto)
                                 </th>
                                 <th>
-                                    @Html.DisplayName("DESCRIPCIÓN")
+                                    @Html.DisplayNameFor(model => model.Descripcion)
                                 </th>
                                 <th>
-                                    @Html.DisplayName("COSTO")
+                                    @Html.DisplayNameFor(model => model.costo)
                                 </th>
                                 <th>
-                                    @Html.DisplayName("PRECIO")
+                                    @Html.DisplayNameFor(model => model.Precio)
                                 </th>
 
 
 
-                                <th>ACCIONES</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
                         @foreach (var item in Model)
                         {
-                            <tr onclick="ejecutar('item.idProducto')">
+                            <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.idProducto)
                                 </td>
@@ -66,7 +63,7 @@
 
 
                                 <td>
-                                    <a href="@Url.Action("Create","productos1",new { id=item.idProducto})" class="edit"><i class="fas fa-edit eliminar"></i></a> |
+                                    <a href="@Url.Action("Edit","productos1",new { id=item.idProducto})"><i class="fas fa-edit eliminar"></i></a> |
                                     <a href="@Url.Action("Details","productos1",new { id=item.idProducto})"><i class="fas fa-info-circle eliminar "></i></a> |
                                     <a href="@Url.Action("Delete","productos1",new { id=item.idProducto})"><i class="fas fa-trash-alt eliminar eli"></i></a>
 
@@ -91,7 +88,5 @@
         $('.dataTables_length').addClass('bs-select');
     });
 </script>
-    
 
 
-    
