--- a/SpointLiteVersion/Views/suplidores/Index.cshtml
+++ b/SpointLiteVersion/Views/suplidores/Index.cshtml
@@ -14,22 +14,10 @@
                 <Button onclick="location.href='@Url.Action("Create","suplidores")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
 
             </p>
-            <div class="form-row divbuscar">
-                <div class="form-group col-md-4">
-
-                    <input type="text" name="valor" value="" class="form-control" placeholder="Buscar Suplidor" required />
-
-
-                </div>
-                <div class="form-group">
-
-                    <button type="submit" class="btn btn-primary"><i class="fas fa-search"></i></button>
-
-                </div>
-            </div>
+          
             <div class="row">
                 <div class="modal-content" style="width:88%; margin-left:4%; margin-top:2%;">
-                    <table class="table  table-hover t tabla">
+                    <table class="table  table-hover t tabla" id="tabla">
                         <thead>
 
                             <tr>
@@ -72,7 +60,7 @@
 
 
 
-                           
+
 
 
                                 <td>
@@ -92,3 +80,12 @@
     </div>
 </div>
 <script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#tabla').DataTable({
+            "pagingType": "full_numbers" // "simple" option for 'Previous' and 'Next' buttons only
+        });
+        $('.dataTables_length').addClass('bs-select');
+    });
+</script>
