--- a/SpointLiteVersion/Content/Style.css
+++ b/SpointLiteVersion/Content/Style.css
@@ -148,6 +148,7 @@ th {
 }
 .dataTables_wrapper{
     margin-bottom:30px;
+
 }
 
 .paginate_button.current {
@@ -163,6 +164,36 @@ th {
     margin-top:20px;
     margin-bottom:25px;
 }
+.btnelimina {
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+    background-color: #f50057;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    font-weight: 500;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    border-radius: 4px;
+    text-transform: uppercase;
+}
+
+#crear {
+    background-color: #3c8dbc;
+    border-color: #3c8dbc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    font-weight: 500;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    border-radius: 4px;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+}
+#crear i{
+
+    font-size:21px;
+}
+#tabla tr:hover{
+    cursor:pointer;
+}
+.form-horizontal {
+    margin-left: 79px !important;
+}
 .control-label {
     color: #5b5a5a;
     margin-left: -15px;
@@ -172,8 +203,14 @@ th {
     padding-right:0px !important;
 }
 
-.boton{
-    padding-left:0px !important;
+.boton {
+    padding-left: 0px !important;
+    width: 20px;
+}
+.form-horizontal .checkbox{
+    min-height: 27px;
+    margin-top:42px;
+    margin-left:0px !important;
 }
 .icono{
     margin-top:38px;
