--- a/SpointLiteVersion/Views/productos1/Index.cshtml
+++ b/SpointLiteVersion/Views/productos1/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="col-md-9 modal-content contedor" style="width:90%; margin-left:4%; margin-top:2%;">
             <h2 style="margin-left:30px; margin-bottom:35px;">Productos</h2>
             <p>
-                <Button onclick="location.href='@Url.Action("Create","productos1")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
+                <Button onclick="location.href='@Url.Action("Create","productos1")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i></Button>
 
             </p>
             <div class="form-row divbuscar">
@@ -19,7 +19,7 @@
 
 
                 </div>
-               
+
             </div>
             <div class="row">
                 <div class="modal-content" style="width:88%; margin-left:4%; margin-top:2%;">
@@ -28,7 +28,7 @@
 
                             <tr>
                                 <th>
-                                    @Html.DisplayName("ID")
+                                    @Html.DisplayName("CODIGO")
                                 </th>
                                 <th>
                                     @Html.DisplayName("DESCRIPCIÓN")
@@ -47,9 +47,9 @@
                         </thead>
                         @foreach (var item in Model)
                         {
-                            <tr onclick="ejecutar('item.idProducto')">
+                            <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.idProducto)
+                                    @Html.DisplayFor(modelItem => item.CodProducto)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Descripcion)
@@ -65,10 +65,10 @@
 
 
 
+
+
                                 <td>
-                                    <a href="@Url.Action("Create","productos1",new { id=item.idProducto})" class="edit"><i class="fas fa-edit eliminar"></i></a> |
-                                    <a href="@Url.Action("Details","productos1",new { id=item.idProducto})"><i class="fas fa-info-circle eliminar "></i></a> |
-                                    <a href="@Url.Action("Delete","productos1",new { id=item.idProducto})"><i class="fas fa-trash-alt eliminar eli"></i></a>
+                                    <a hidden href="@Url.Action("Create","productos1",new { id=item.idProducto})" class="edit"><i class="fas fa-edit eliminar"></i></a> |
 
 
                                 </td>
@@ -82,16 +82,67 @@
     </div>
 </div>
 <script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="~/Scripts/jquery.numeric.js"></script>
+
+<script src="~/Scripts/autoNumeric/autoNumeric-min.js"></script>
+<script src="~/Scripts/autoNumeric/autoNumeric.js"></script>
+
+
 
 <script>
     $(document).ready(function () {
         $('#tabla').DataTable({
-            "pagingType": "full_numbers" // "simple" option for 'Previous' and 'Next' buttons only
+            "pagingType": "full_numbers", // "simple" option for 'Previous' and 'Next' buttons only
+            "language": {
+                "decimal": "",
+                "emptyTable": "NO HAY INFORMACION",
+                "info": "MOSTRANDO _START_ A _END_ de _TOTAL_ ENTRADAS",
+                "infoEmpty": "MOSTRANDO 0 to 0 of 0 ENTRADAS",
+                "infoFiltered": "(FILTRADO DE _MAX_ TOTAL ENTRADAS)",
+                "infoPostFix": "",
+                "thousands": ",",
+                "lengthMenu": "MOSTRAR _MENU_ ENTRADAS",
+                "loadingRecords": "CARGANDO...",
+                "processing": "PROCESANDO...",
+                "search": "BUSCAR:",
+                "zeroRecords": "SIN RESULTADOS ENCONTRADOS",
+                "paginate": {
+                    "first": "PRIMERO",
+                    "last": "ULTIMO",
+                    "next": "SIGUIENTE",
+                    "previous": "ANTERIOR"
+                }
+            }
         });
         $('.dataTables_length').addClass('bs-select');
     });
 </script>
-    
+<script>
+    $(document).ready(function () {
+
+        $('#tabla tr').click(function () {
+            var href = $(this).find("a").attr("href");
+            if (href) {
+                window.location = href;
+            }
+        });
+
+    });
+</script>
+
+<script>
+
+    //$(function () {
+
+    //    //var autoNumericInstance = new AutoNumeric('#tabla td', AutoNumeric.getPredefinedOptions().numericPos.dotDecimalCharCommaSeparator);
 
 
-    
+    //    //$("#tabla td").autoNumeric('init', { aSign: "$ ", decimalCharacter: ",", lZero: "deny" });
+    //    //$("#tabla td").numeric(",");
+    //});
+    //$("#itbis").numeric(",");
+
+
+</script>
+
+
